Stopped back to top button from displaying above header on mobile

--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ header {
     line-height: 60px;
     padding: 0;
     display: flex;
+    z-index: 1;
 }
 
 header nav {
